# claude_computer_use_demo

./: README.md  pyproject.toml
src/computer_use_demo/: loop.py
src/computer_use_demo/tools/: bash.py  computer.py
