[project]
name = "computer-use-demo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Martin Liu", email = "hflhmartin@gmail.com" }
]
dependencies = [
    "anthropic[bedrock,vertex]>=0.37.1",
    "boto3>=1.28.57",
    "google-auth<3, >=2",
    "jsonschema==4.22.0",
    "streamlit==1.38.0",
    "pyautogui>=0.9.54",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
demo = { cmd = "streamlit run src/computer_use_demo/streamlit_app.py", env = { API_PROVIDER = "bedrock" } }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/computer_use_demo"]
